--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -17,6 +17,8 @@
     <td><%= article.description %> </td> 
     <td> <%= link_to "Edit", edit_article_path(article) %> </td> 
     <td> <%= link_to "Show", article_path(article) %></td>
+    <td> Created by: <%= article.user.username if article.user%>, <%= time_ago_in_words(article.created_at) %> ago, 
+     last updated: <%= time_ago_in_words(article.updated_at) %> ago</td>
   </tr>
   <% end %>
 </table>
