Create show action and add gravatar

--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,5 +1,5 @@
 <h1>
-   Sign Up As A New User
+   Edit user information
 </h1>
 
 <% if @user.errors.any? %>
@@ -27,7 +27,7 @@
     <%= f.password_field :password, placeholder: "Enter your password" %>
   </p>
   <p>
-     <%= f.submit "Sign Up" %>
+     <%= f.submit "Update Account %>
   </p>
 <% end %>
 
